--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1">
   <link rel="shortcut icon" href="assets/images/ihsmunc-logo-128x127.png" type="image/x-icon">
   <meta name="description" content="">
-  <title>Home</title>
+  <title>Homepage</title>
   <link rel="stylesheet" href="assets/web/assets/mobirise-icons/mobirise-icons.css">
   <link rel="stylesheet" href="assets/tether/tether.min.css">
   <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
@@ -61,7 +61,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/j">website templates</a></section><section class="cid-r7YLtCytf6 mbr-fullscreen mbr-parallax-background" id="header2-4">
+<section class="engine"><a href="https://mobirise.info/r">bootstrap templates</a></section><section class="cid-r7YLtCytf6 mbr-fullscreen mbr-parallax-background" id="header2-4">
 
     
 
