--- a/committees.html
+++ b/committees.html
@@ -60,7 +60,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/v">html templates</a></section><section class="mbr-section content5 cid-r84x58XBrN mbr-parallax-background" id="content5-m">
+<section class="engine"><a href="https://mobirise.info/l">free web templates</a></section><section class="mbr-section content5 cid-r84x58XBrN mbr-parallax-background" id="content5-m">
 
     
 
@@ -93,7 +93,7 @@
                 <div class="card-wrapper ">
                     <div class="card-img">
                         <div class="mbr-overlay"></div>
-                        <div class="mbr-section-btn text-center"><a href="https://mobirise.co" class="btn btn-success-outline display-4">Learn More</a></div>
+                        <div class="mbr-section-btn text-center"><a href="oops.html" class="btn btn-success-outline display-4">Learn More</a></div>
                         <img src="assets/images/01.jpg" alt="Mobirise">
                     </div>
                     <div class="card-box">
@@ -107,7 +107,7 @@
                 <div class="card-wrapper">
                     <div class="card-img">
                         <div class="mbr-overlay"></div>
-                        <div class="mbr-section-btn text-center"><a href="https://mobirise.co" class="btn btn-success-outline display-4">Learn More</a></div>
+                        <div class="mbr-section-btn text-center"><a href="oops.html" class="btn btn-success-outline display-4">Learn More</a></div>
                         <img src="assets/images/02.jpg" alt="Mobirise">
                     </div>
                     <div class="card-box">
@@ -138,7 +138,7 @@
                 <div class="card-wrapper ">
                     <div class="card-img">
                         <div class="mbr-overlay"></div>
-                        <div class="mbr-section-btn text-center"><a href="https://mobirise.co" class="btn btn-success-outline display-4">Learn More</a></div>
+                        <div class="mbr-section-btn text-center"><a href="oops.html" class="btn btn-success-outline display-4">Learn More</a></div>
                         <img src="assets/images/01.jpg" alt="Mobirise">
                     </div>
                     <div class="card-box">
@@ -151,7 +151,7 @@
                 <div class="card-wrapper">
                     <div class="card-img">
                         <div class="mbr-overlay"></div>
-                        <div class="mbr-section-btn text-center"><a href="https://mobirise.co" class="btn btn-success-outline display-4">Learn More</a></div>
+                        <div class="mbr-section-btn text-center"><a href="oops.html" class="btn btn-success-outline display-4">Learn More</a></div>
                         <img src="assets/images/02.jpg" alt="Mobirise">
                     </div>
                     <div class="card-box">
@@ -165,7 +165,7 @@
                 <div class="card-wrapper">
                     <div class="card-img">
                         <div class="mbr-overlay"></div>
-                        <div class="mbr-section-btn text-center"><a href="https://mobirise.co" class="btn btn-success-outline display-4">Learn More</a></div>
+                        <div class="mbr-section-btn text-center"><a href="oops.html" class="btn btn-success-outline display-4">Learn More</a></div>
                         <img src="assets/images/03.jpg" alt="Mobirise">
                     </div>
                     <div class="card-box">
@@ -193,7 +193,7 @@
                 <div class="card-wrapper ">
                     <div class="card-img">
                         <div class="mbr-overlay"></div>
-                        <div class="mbr-section-btn text-center"><a href="https://mobirise.co" class="btn btn-success-outline display-4">Learn More</a></div>
+                        <div class="mbr-section-btn text-center"><a href="oops.html" class="btn btn-success-outline display-4">Learn More</a></div>
                         <img src="assets/images/01.jpg" alt="Mobirise">
                     </div>
                     <div class="card-box">
@@ -206,7 +206,7 @@
                 <div class="card-wrapper">
                     <div class="card-img">
                         <div class="mbr-overlay"></div>
-                        <div class="mbr-section-btn text-center"><a href="https://mobirise.co" class="btn btn-success-outline display-4">Learn More</a></div>
+                        <div class="mbr-section-btn text-center"><a href="oops.html" class="btn btn-success-outline display-4">Learn More</a></div>
                         <img src="assets/images/02.jpg" alt="Mobirise">
                     </div>
                     <div class="card-box">
@@ -220,7 +220,7 @@
                 <div class="card-wrapper">
                     <div class="card-img">
                         <div class="mbr-overlay"></div>
-                        <div class="mbr-section-btn text-center"><a href="https://mobirise.co" class="btn btn-success-outline display-4">Learn More</a></div>
+                        <div class="mbr-section-btn text-center"><a href="oops.html" class="btn btn-success-outline display-4">Learn More</a></div>
                         <img src="assets/images/03.jpg" alt="Mobirise">
                     </div>
                     <div class="card-box">
@@ -234,7 +234,7 @@
                 <div class="card-wrapper">
                     <div class="card-img">
                         <div class="mbr-overlay"></div>
-                        <div class="mbr-section-btn text-center"><a href="https://mobirise.co" class="btn btn-success-outline display-4">Learn More</a></div>
+                        <div class="mbr-section-btn text-center"><a href="oops.html" class="btn btn-success-outline display-4">Learn More</a></div>
                         <img src="assets/images/01.jpg" alt="Mobirise">
                     </div>
                     <div class="card-box">
