--- a/registrations.html
+++ b/registrations.html
@@ -61,7 +61,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/w">html5 templates</a></section><section class="mbr-section content5 cid-r7YP696cHk mbr-parallax-background" id="content5-8">
+<section class="engine"><a href="https://mobirise.info/h">how to create your own web page for free</a></section><section class="mbr-section content5 cid-r7YP696cHk mbr-parallax-background" id="content5-8">
 
     
 
@@ -100,8 +100,7 @@
                         <p class="mbr-text mbr-fonts-style display-7">
                             Apply here if you are an independent student.</p>
                     </div>
-                    <div class="mbr-section-btn text-center"><a href="https://mobirise.co" class="btn btn-primary display-4"><span class="mbri-edit mbr-iconfont mbr-iconfont-btn"></span>
-                            Register</a></div>
+                    <div class="mbr-section-btn text-center"><a href="registrations.html" class="btn btn-primary display-4"><span class="mbri-edit mbr-iconfont mbr-iconfont-btn"></span>Not Open.</a></div>
                 </div>
             </div>
 
@@ -115,7 +114,7 @@
                         <p class="mbr-text mbr-fonts-style display-7">
                             Apply here if you are a group of students enrolled in a school.<br>Delegation Size: TBA.</p>
                     </div>
-                    <div class="mbr-section-btn text-center"><a href="https://mobirise.co" class="btn btn-primary display-4"><span class="mbri-edit mbr-iconfont mbr-iconfont-btn"></span>Register</a></div>
+                    <div class="mbr-section-btn text-center"><a href="oops.html" class="btn btn-primary display-4"><span class="mbri-edit mbr-iconfont mbr-iconfont-btn"></span>Not Open.</a></div>
                 </div>
             </div>
 
@@ -128,7 +127,7 @@
                         <h4 class="card-title mbr-fonts-style display-7">Institution Enrolled Delegate</h4>
                         <p class="mbr-text mbr-fonts-style display-7">Apply here if you are a student at the Indian High School, Dubai.</p>
                     </div>
-                    <div class="mbr-section-btn text-center"><a href="https://mobirise.co" class="btn btn-primary display-4"><span class="mbri-edit mbr-iconfont mbr-iconfont-btn"></span>Register</a></div>
+                    <div class="mbr-section-btn text-center"><a href="oops.html" class="btn btn-primary display-4"><span class="mbri-edit mbr-iconfont mbr-iconfont-btn"></span>Not Open.</a></div>
                 </div>
             </div>
 
