--- a/resources.html
+++ b/resources.html
@@ -61,7 +61,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/k">develop your own website</a></section><section class="mbr-section content5 cid-r84xy3Qy4a mbr-parallax-background" id="content5-n">
+<section class="engine"><a href="https://mobirise.info/y">html site templates</a></section><section class="mbr-section content5 cid-r84xy3Qy4a mbr-parallax-background" id="content5-n">
 
     
 
@@ -81,7 +81,7 @@
     </div>
 </section>
 
-<section class="features15 cid-r8lxmXKBRX" id="features15-1e">
+<section class="features15 cid-r8lCeWAOZo" id="features15-1i">
 
     
 
