--- a/resources.html
+++ b/resources.html
@@ -61,7 +61,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/y">html site templates</a></section><section class="mbr-section content5 cid-r84xy3Qy4a mbr-parallax-background" id="content5-n">
+<section class="engine"><a href="https://mobirise.info/d">free site maker</a></section><section class="mbr-section content5 cid-r84xy3Qy4a mbr-parallax-background" id="content5-n">
 
     
 
@@ -95,7 +95,7 @@
             <div class="col-12 col-md-6 mb-4 col-lg-4">
                 <div class="card flip-card p-5 align-center">
                     <div class="card-front card_cont">
-                        <img src="assets/images/jumbotron.jpg" alt="Mobirise">
+                        <img src="assets/images/night-1149700-1920-1200x799.jpg" alt="Mobirise" title="">
                     </div>
                     <div class="card_back card_cont">
                         <h4 class="card-title display-5 py-2 mbr-fonts-style display-2">Background Guides<br>(Pending Upload)</h4>
@@ -108,7 +108,7 @@
                 
                 <div class="card flip-card p-5 align-center">
                     <div class="card-front card_cont">
-                        <img src="assets/images/jumbotron2.jpg" alt="Mobirise">
+                        <img src="assets/images/united-nations-building-753506-1920-1200x674.jpg" alt="Mobirise" title="">
                     </div>
                     <div class="card_back card_cont">
                         <h4 class="card-title py-2 mbr-fonts-style display-2">Delegate's Handbook<br>(Pending Upload)</h4>
@@ -120,7 +120,7 @@
             <div class="col-12 col-md-6 mb-4 col-lg-4">
                 <div class="card flip-card p-5 align-center">
                     <div class="card-front card_cont">
-                        <img src="assets/images/background5.jpg" alt="Mobirise">
+                        <img src="assets/images/flag-3369978-1280-1200x675.jpg" alt="Mobirise" title="">
                     </div>
                     <div class="card_back card_cont">
                         <h4 class="card-title py-2 mbr-fonts-style display-2">Terms &amp; Conditions<br>(Pending Upload)</h4>
